Inclisão da classe AIService

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 kotlin.code.style=official
-kotlinVersion=2.0.20
+kotlinVersion=2.1.21
 dateTimeVersion=0.6.1
 coroutineVersion=1.9.0
 composeVersion=1.7.1
@@ -7,5 +7,6 @@ logbackVersion=1.5.12
 exposedVersion=0.56.0
 ktorVersion=3.0.1
 postgresqlVersion=42.7.4
+sqliteVersion=3.50.2.0
 hikariVersion=6.1.0
 cliktVersion=5.0.3
