Configuração do ChatController

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@ kotlinVersion=2.1.21
 dateTimeVersion=0.6.1
 coroutineVersion=1.9.0
 composeVersion=1.7.1
-logbackVersion=1.5.13
+logbackVersion=1.5.18
 exposedVersion=0.56.0
 ktorVersion=3.0.1
 sqliteVersion=3.50.2.0
@@ -11,3 +11,4 @@ hikariVersion=6.1.0
 cliktVersion=5.0.3
 typesafeVersion=1.4.3
 fusesourceVersion=2.4.2
+slf4jVersion=2.0.17
