Inclusão dos testes unitários

--- a/gradle.properties
+++ b/gradle.properties
@@ -12,4 +12,8 @@ cliktVersion=5.0.3
 typesafeVersion=1.4.3
 fusesourceVersion=2.4.2
 slf4jVersion=2.0.17
-flywayVersion=11.10.2
+flywayVersion=10.19.0
+jupiterVersion=5.13.3
+mockitoVersion=5.2.0
+coroutinesTestVersion=1.10.2
+ktorMockVersion=3.0.1
